corrected border/graph overlap

--- a/media/style.css
+++ b/media/style.css
@@ -116,10 +116,17 @@ DIV.graphdiv {
     margin-right: auto;
     width: 600px;
     height: 300px;
+    
+}
+
+DIV.outergraphdiv {
+    margin-left:auto;
+    margin-right:auto;
+    width:602px;
+    height: 302px;
     border: 2px solid;
     border-color: rgb(38,0,117);
-    
-    
+    padding: 2px;
 }
 DIV.projects ul {
 	list-style-type: circle;
